<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller1.Principal">

    <TextView
        android:text="@string/empresaxyz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_weight="0.04"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.58" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/cuero"
                android:textAlignment="textStart"
                android:textStyle="normal|bold" />

            <RadioButton
                android:text="@string/cuerda"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:textStyle="normal|bold"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.58" />
        </LinearLayout>

        <TextView
            android:text="@string/dije"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbDije" />

        <TextView
            android:text="@string/tipomanilla"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbManilla" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtCantidad"
            android:hint="@string/digiteCantidad"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tipoDePago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/tipoDePago"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.42" />

            <RadioButton
                android:id="@+id/Dolar"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/Dolar" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:text="@string/peso" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/cancelar"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:id="@+id/Cancelar" />

            <Button
                android:text="@string/aceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="142dp">

            <TextView
                android:text="@string/detallesCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:text="@string/valorUnitario"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:id="@+id/textView10"
                    android:layout_weight="2.28"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:id="@+id/textView11"
                    android:layout_weight="9.82" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="63dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:text="@string/valorTotal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:layout_weight="0.15" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_weight="0.43" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
